--- a/bibliography.bib
+++ b/bibliography.bib
@@ -103,7 +103,7 @@
 	file = {arXiv\:1509.03604 PDF:/Users/gwenchee/Zotero/storage/3IFS96MV/Huff et al. - 2015 - Fundamental Concepts in the Cyclus Fuel Cycle Simu.pdf:application/pdf;arXiv\:1509.03604 PDF:/Users/gwenchee/Zotero/storage/A9P4584A/Huff et al. - 2015 - Fundamental Concepts in the Cyclus Fuel Cycle Simu.pdf:application/pdf;arXiv.org Snapshot:/Users/gwenchee/Zotero/storage/KXHGGIDF/1509.html:text/html;arXiv.org Snapshot:/Users/gwenchee/Zotero/storage/MKRH5AKM/1509.html:text/html;fundamentals.pdf:/Users/gwenchee/Zotero/storage/BJ5VI3CR/fundamentals.pdf:application/pdf;fundamentals.pdf:/Users/gwenchee/Zotero/storage/JIE6VPKS/fundamentals.pdf:application/pdf;ScienceDirect Full Text PDF:/Users/gwenchee/Zotero/storage/R9WQU82P/Huff et al. - 2016 - Fundamental concepts in the Cyclus nuclear fuel cy.pdf:application/pdf;ScienceDirect Snapshot:/Users/gwenchee/Zotero/storage/7S2VTED7/S0965997816300229.html:text/html;ScienceDirect Snapshot:/Users/gwenchee/Zotero/storage/G9M2I8J2/login.html:text/html;ScienceDirect Snapshot:/Users/gwenchee/Zotero/storage/2VKV9XTG/S0965997816300229.html:text/html}
 }
 
-@article{lee_advanced_nodate,
+@article{lee_advanced_2008,
 	title = {Advanced {Electrorefining} {Process} at {KAERI}},
 	url = {http://www.iaea.org/inis/collection/NCLCollectionStore/_Public/40/032/40032685.pdf},
 	abstract = {In order to enhance the throughput of a pyroprocessing in which electrochemical processes are
@@ -117,7 +117,10 @@ of particles such as uranium dendrites or noble metals was analyzed to achieve t
 conditions. The operating conditions for the cathode processor in which molten salt is distilled were also
 investigated.},
 	urldate = {2018-03-09},
+	journal = {ATALANTE 2008},
 	author = {Lee, Hansoo and Lee, Jong Hyun and Park, Sung Bin and Lee, Yoon Sang and Kim, Eung Ho and Park, Sung Won},
+	month = may,
+	year = {2008},
 	file = {40032685.pdf:C\:\\Users\\Greg\\Zotero\\storage\\FJ2GXPWT\\40032685.pdf:application/pdf}
 }
 
@@ -205,13 +208,25 @@ investigated.},
 	file = {Kim et al. - 2013 - Development of an anode structure consisting of gr.pdf:C\:\\Users\\Greg\\Zotero\\storage\\3UUDYXM2\\Kim et al. - 2013 - Development of an anode structure consisting of gr.pdf:application/pdf}
 }
 
-@techreport{noauthor_iaea_2017,
-	title = {{IAEA} {Safeguards}: {Serving} {Nuclear} {Non}-{Proliferation}},
+
+@article{noauthor_iaea_2017,
+	title = {IAEA Safeguards: Serving Nuclear Non-Proliferation},
 	url = {https://www.iaea.org/sites/default/files/17/12/sg-serving-nuclear-non-proliferation.pdf},
-	urldate = {2018-04-27},
-	institution = {IAEA},
+	urldate = {2018-04-19},
+	publisher = {IAEA},
+	author = {Amano, Yukiya},
 	month = dec,
 	year = {2017},
-	pages = {19},
-	file = {sg-serving-nuclear-non-proliferation.pdf:C\:\\Users\\Greg\\Zotero\\storage\\3JXLSW6D\\sg-serving-nuclear-non-proliferation.pdf:application/pdf}
+	file = {sg-serving-nuclear-non-proliferation.pdf:C\:\\Users\\Greg\\Zotero\\storage\\FZZ2ZLNZ\\sg-serving-nuclear-non-proliferation.pdf:application/pdf}
+}
+
+
+@techreport{jubin_spent_2009,
+	title = {Spent {Fuel} {Reprocessing}},
+	url = {http://www.cresp.org/NuclearChemCourse/monographs/07_Jubin_Introduction%20to%20Nuclear%20Fuel%20Cycle%20Separations%20-%20Final%20rev%202_3_2_09.pdf},
+	urldate = {2018-05-04},
+	institution = {Oak Ridge National Lab. (ORNL), Oak Ridge, TN (United States)},
+	author = {Jubin, Robert},
+	year = {2009},
+	file = {07_Jubin_Introduction to Nuclear Fuel Cycle Separations - Final rev 2_3_2_09.pdf:C\:\\Users\\Greg\\Zotero\\storage\\AVVWXH3N\\07_Jubin_Introduction to Nuclear Fuel Cycle Separations - Final rev 2_3_2_09.pdf:application/pdf}
 }
