--- a/2018-westphal-antpc.tex
+++ b/2018-westphal-antpc.tex
@@ -87,9 +87,15 @@ are described below regarding information to be used by \Cyclus.
 
 For LWR fuel, the fuel must be initially treated and separated before proceeding with electrolytic processes. Heated under 
 500$^{\circ}$C, noble gases, carbon, and tritium are collected to decay in storage, and uranium dioxide is converted to $U_3O_8$. 
-Actinides are also converted to their stable oxide forms and a majority are removed \cite{flowsheet_1998,jubin_spent_2009}. Voloxidation throughput
-can be increased by heating the uranium dioxide to temperatures in excess of 800$^{\circ}$C. Other methods to improve the U$_3$O$_8$ 
-reaction rate are to use alternative oxidants such as cycling between H$_2$ and air \cite{jubin_spent_2009}.
+Actinides are also converted to their stable oxide forms and a majority are removed \cite{flowsheet_1998,jubin_spent_2009}. 
+Voloxidation throughput can be increased by heating the uranium dioxide to temperatures in excess of 800$^{\circ}$C. 
+Other methods to improve the U$_3$O$_8$ reaction rate are to use alternative oxidants such as cycling between H$_2$ and air \cite{jubin_spent_2009}.
+
+\begin{figure}[ht]
+	\centering\includegraphics[width=1\linewidth]{volox}
+	\caption{A material balance over the voloxidation sub-process, including observables.}
+	\label{fig:volox}
+\end{figure}
 
 \subsection{Electroreduction}
 
@@ -100,6 +106,9 @@ Electroreduction can further improve its throughput by the addition of Li$_2$O a
 of the anode \cite{choi_electrochemical_2015}. Since Li$_2$O is used to speed up the reaction, it is important to note 
 that for signatures and observables the operators could add more oxide than reported to IAEA. More frequent shipments 
 of lithium oxide can be tracked as an observable to match records.
+
+Electroreduction produces the majority of Sr and Cs waste with a considerable decay 
+signature proportional to the efficiency and size of the feed batch \cite{Borrelli_2017,flowsheet_1998}.
 
 \subsection{Electrorefining}
 
@@ -118,6 +127,9 @@ significantly hindered. Cathode arrangement and anode rotation speed also affect
 dendrites \cite{lee_advanced_2008}. The addition of a central stirrer allows mixing of uranium dendrites stuck on 
 the bottom of the vessel, improving separation efficiency and increasing throughput. 
 
+The electrorefining process also produces the fission product waste stream which requires monitoring. The following products are produced 
+and tracked in this step: Tc, Ag, Pd, Rh, Ru, Mo and Zr \cite{flowsheet_1998}.
+
 \subsection{Electrowinning}
 
 The molten salt contains TRUs from electrorefining that are separated through electrowinning with trace uranium quantities. 
@@ -128,6 +140,14 @@ prevent Cl$_2$ from corroding the anode \cite{kim_development_2013,choi_electroc
 depends on the material choice for the anode shroud since a nonporous shroud limits ion pathways to the points of contact 
 with the anode. Higher porosity corresponds to free ion paths and a higher current. With a higher current the separation 
 time for reduction and winning are reduced \cite{choi_electrochemical_2015}.
+
+\begin{figure}[ht]
+	\centering\includegraphics[width=1\linewidth]{winning}
+	\caption{A material balance over the electrowinning sub-process, including observables.}
+	\label{fig:winning}
+\end{figure}
+
+Electrowinning produces Cs waste similar to electroreduction except in reduced quantities.
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Method: \Cyclus Simulation}
 The separations facility provided by the \Cycamore library expansion is used as an initial model of a simple PRIDE facility. 
@@ -193,12 +213,8 @@ Temperature and pressure provide a significant improvement in removal efficiency
 
 \section{Discussion}
 Using a material balance area over electrorefining and electroreduction yields the majority of detectable waste from 
-the electrochemical processes. Electroreduction produces the majority of Sr and Cs waste with a considerable decay 
-signature proportional to the efficiency and size of the feed batch \cite{Borrelli_2017,flowsheet_1998}. The electrorefining 
-process also produces the fission product waste stream which requires monitoring. The following products are produced 
-and tracked in this step: Tc, Ag, Pd, Rh, Ru, Mo and Zr \cite{flowsheet_1998}. Material balances over the remaining 
-processes are used to verify diversion did not occur. Electrowinning produces Cs waste similar to electroreduction 
-except in reduced quantities. Fuel fabrication is of high risk since finished product can be diverted with no additional 
+the electrochemical processes.  Material balances over the remaining 
+processes are used to verify diversion did not occur.  Fuel fabrication is of high risk since finished product can be diverted with no additional 
 processing steps, therefore a material balance must also be taken here. 
 
 To determine the most significant places of diversion and where to observe them, multiple scenarios must be considered. 
