--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1,22 +1,23 @@
 
-@techreport{huff_extensions_2014,
-	title = {Extensions to the cyclus ecosystem in support of market-driven transition capability},
-	institution = {Lawrence Livermore National Laboratory (LLNL), Livermore, CA},
-	author = {Huff, K. D. and Fratoni, M. and Greenberg, H. R.},
+@article{carlsen_cycamore_2014,
+	title = {Cycamore v1.0.0},
+	author = {Carlsen, R W and Gidden, M and Huff, K D and Opotowsky, A C and Rakhimov, O and Scopatz, A M and Wilson, P},
 	year = {2014},
-	file = {huff_extensions_2014.pdf:/Users/gwenchee/Zotero/storage/E3FE62B3/huff_extensions_2014.pdf:application/pdf}
+	month = jun,
 }
 
 @article{Hou_2016,
 	title = {Diversion Detection in Partially Observed Nuclear Fuel Cycle Networks},
 	author = {Hou, E. and Yilmaz, Y. and Hero, A. O.},
-	year = {2016}
+	year = {2016},
+	annote = {arXiv:1604.04322}
 }
 
 @article{Yilmaz_2016,
 	title = {Online Diversion Detection in Nuclear Fuel Cycles via Multimodal Observations},
 	author = {Yilmaz, Y. and Hou, E. and Hero, A. O.},
 	year = {2016},
+	annote = {arXiv:1605.00282}
 }
 
 @article{chapman_revision_1984,
@@ -117,7 +118,7 @@ of particles such as uranium dendrites or noble metals was analyzed to achieve t
 conditions. The operating conditions for the cathode processor in which molten salt is distilled were also
 investigated.},
 	urldate = {2018-03-09},
-	journal = {ATALANTE 2008},
+	journal = {ATALANTE},
 	author = {Lee, Hansoo and Lee, Jong Hyun and Park, Sung Bin and Lee, Yoon Sang and Kim, Eung Ho and Park, Sung Won},
 	month = may,
 	year = {2008},
