--- a/2018-westphal-antpc.tex
+++ b/2018-westphal-antpc.tex
@@ -60,13 +60,12 @@ detection timeliness enabled by quantifying signatures and observables in variou
 \Cyclus models the flow of material through user-defined nuclear fuel cycle scenarios. Facilities in nuclear fuel cycles vary, 
 requiring a diverse collection of pre-designed facility process models, known as \emph{archetypes}. \Cycamore, the CYClus 
 Additional MOdules REpository, provides common facility archetypes (separations, enrichment, reactor, etc.)
-\cite{carlsen_cycamore_2014}. Archetypes provide a mold for users to input values specific to each facility with a known output 
-\Cyclus can interpret. Simulations run in discrete time steps that allow exact isotopes to be dynamically tracked between facilities \cite{huff_fundamental_2016}. Tracking requires a form of signature or observable to follow the material accurately throughout 
-and between facilities. Potentially trackable signatures and observables include truck deliveries, power draw, and steam production  \cite{Hou_2016,Yilmaz_2016}.
+\cite{carlsen_cycamore_2014}. Archetypes are predetermined facility layouts with
+known parameters corresponding to an output for the \Cyclus framework. Simulations run in discrete time steps and allow exact isotopes to be dynamically tracked between facilities \cite{huff_fundamental_2016}. This work seeks to add signature and observable tacking capabilities to \Cyclus. Potentially trackable signatures and observables include truck deliveries, power draw, and steam production  \cite{Hou_2016,Yilmaz_2016}.
 \Cyclus' discrete time allows users to investigate diversion and flag the time and location diversion occurs.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\section{Background: Pyroprocessing}
+\section{Pyroprocessing}
 Pyroprocessing is an electrochemical separation process used to recycle spent fuel into metallic fuel for use in advanced reactors.
 With the capability of processing various forms of waste, efficiencies will differ according to design. There are four major 
 systems within pyroprocessing with observable waste: voloxidation, electroreduction, electrorefining, and electrowinning \cite{Borrelli_2017}.  
@@ -228,8 +227,11 @@ multiple aspects which affect the throughput and efficiencies of different waste
 
 The signatures and observables contain quantities that are measured directly inside
 the facility and indirect characteristics observables at distance. A broader category for the facility as a whole is also described for larger parameters such as
-throughput and batch size. The number of shipments and cars in the parking lot also serve as an indicator to excess work being done. Thermal imaging, further, can
-determine the operational status of the facility.
+throughput and batch size. Since throughput is a facility parameter, 
+it is seen in a majority of the sub-processes. Reduction is limited by 
+batch size therefore reducing the throughput of proceeding steps to the 
+electrochemical process. The number of shipments and cars in the parking lot also serve as an indicator to excess work being done. Thermal imaging, further, can
+determine the operational status of the facility. 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
