stop versioning pdfs

--- a/2018-westphal-antpc.tex
+++ b/2018-westphal-antpc.tex
@@ -172,7 +172,8 @@ time for reduction and winning are reduced \cite{choi_electrochemical_2015}.
 Figure \ref{fig:winning} shows that electrowinning produces Cs waste similar to electroreduction except in reduced quantities. Any fission products remaining in the salt from electrorefining are also removed here. Outside of physically tracked quantities, facility power can also be monitored to observe the use of current to increase throughput. 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Method: \Cyclus Simulation}
-The separations facility provided by the \Cycamore library is used as an initial model of a simple PRIDE facility. 
+The separations facility provided by the \Cycamore library is used as an 
+initial model of a simple \gls{PRIDE} facility. 
 The user provides the separations archetype with a feed stream and facility efficiencies.  
 Each waste stream requires a material balance over voloxidation, electroreduction, electrorefining and electrowinning. The main 
 waste streams are metallic waste, ceramic waste from electrowinning and electroreduction, and vitrified waste. Vitrified 
